--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
        </ul>
    </header>
 
+   <section class="title" id="home">
+     <div class="section_title">
+       <h1>Redeeming Love</h1>
+       <p>When love is the only power to change you. A novel depicting the unlimitless power of the love of God.</p>
+     </div>
+
+     <div class="slide">
+       <img src="/images/img1.jpg" alt="book cover">
+     </div>
+   </section>
+
 
     
 </body>
