--- a/index.html
+++ b/index.html
@@ -24,15 +24,29 @@
    <section class="title" id="home">
      <div class="section_title">
        <h1>Redeeming Love</h1>
-       <p>When love is the only power to change you. A novel depicting the unlimitless power of the love of God.</p>
+       <p class="title-msg">When love is the only power to change you. A novel depicting the unlimitless power of the love of God.</p>
+     </div>
      </div>
 
-     <div class="slide">
-       <img src="/images/img1.jpg" alt="book cover">
-     </div>
+     <div class="slider">
+       <div class="images">
+        <input type="radio" name="slide" id="img1" checked>
+        <input type="radio" name="slide" id="img2">
+        <input type="radio" name="slide" id="img3">
+        <input type="radio" name="slide" id="img4">
+
+       <img src="/images/img1.png" class="m1" alt="book cover">
+       <img src="/images/img2.png" class="m2" alt="book cover">
+       <img src="/images/img3.png" class="m3" alt="book cover">
+       <img src="/images/img4.png" class="m4" alt="book cover">
+       </div>
+
+       <div class="dots">
+         <label for="img1"></label>
+         <label for="img2"></label>
+         <label for="img3"></label>
+         <label for="img4"></label>
+       </div>
    </section>
-
-
-    
 </body>
 </html>
