done: about book

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
      <h2 class="logo">Redeeming Love</h2>
      <nav>
        <ul class="nav__links">
-         <li><a href="#">Home</a></li>
-         <li><a href="#">About Book</a></li>
+         <li><a href="#home">Home</a></li>
+         <li><a href="#aboutBook">About Book</a></li>
          <li><a href="#">About Author</a></li>
-         <li><a href="#">Contact</a></li>
        </ul>
    </header>
 
@@ -47,6 +46,22 @@
          <label for="img3"></label>
          <label for="img4"></label>
        </div>
+   </section>
+
+   <section class="about" id="aboutBook">
+     <div class="about-title">
+       <h2>About Book</h2>
+     </div>
+     <p>
+       Redeeming Love is a historical romance by Francine Rivers set in the 1850s Gold Rush in California. The story is inspired by the Book of Hosea from the Bible, and its cental theme is the redeeming love of God towards sinners. In 2020, a film adaption was accounced with D.J Caruso as director. The novel has sold over three millions copies worldwide since its publication in 1991, and was been translated into 30 langauges.
+     </p>
+     <h3>The Story</h3>
+     <p>
+       California’s gold country, 1850. A time when men sold their souls for a bag of gold and women sold their bodies for a place to sleep.
+     
+       Then she meets Michael Hosea. A man who seeks his Father’s heart in everything, Michael Hosea obeys God’s call to marry Angel and to love her unconditionally. Slowly, day by day, he defies Angel’s every bitter expectation until, despite her resistance her frozen heart begins to thaw.
+       But with her unexpected softening come overwhelming feelings of unworthiness and fear. And so Angel runs. Back to the darkness, away from her husband’s pursuing love, terrified of the truth she can no longer deny: Her final healing must come from the One who loves her even more than Michael Hosea does…the One who will never let her go.
+     </p>
    </section>
 </body>
 </html>
