started: about author

--- a/index.html
+++ b/index.html
@@ -63,5 +63,17 @@
        But with her unexpected softening come overwhelming feelings of unworthiness and fear. And so Angel runs. Back to the darkness, away from her husband’s pursuing love, terrified of the truth she can no longer deny: Her final healing must come from the One who loves her even more than Michael Hosea does…the One who will never let her go.
      </p>
    </section>
+
+   <section class="author" id="aboutAuthor">
+    <img src="/images/author.jpg" alt="Francine Rivers">
+
+    <div class="about-author">
+      <h2>About Author</h2>
+      <h3>Biography</h3>
+      <p>
+        New York Times bestselling author Francine Rivers had a successful writing career in the general market for several years becoming a born-again Christian; she then wrote Redeeming Love as her statement of faith. A retelling of the biblical story of Gomer and Hosea set during the time of the California Gold Rush, Redeeming Love is now considered by many to be a classic work of Christian fiction and it continues to be one of the industry’s top-selling titles year after year. Since Redeeming Love, Francine has published numerous bestselling novels with Christian themes—including The Masterpiece, Bridge to Haven, and A Voice in the Wind —and she has continued to win both industry acclaim and reader loyalty around the world. Her Christian novels have been awarded or nominated for numerous honors and in 1997, after winning her third RITA Award for Inspirational Fiction, Francine was inducted into the Romance Writers of America’s Hall of Fame. In 2015, she received the Lifetime Achievement Award from American Christian Fiction Writers (ACFW). Francine’s novels have been translated into over 30 different languages, and she enjoys bestseller status in many foreign countries. Francine and her husband live in Northern California and enjoy time spent with their grown children and grandchildren. She uses her writing to draw closer to the Lord, and she desires that through her work she might worship and praise Jesus for all He has done and is doing in her life.
+      </p>
+    </div>
+   </section>
 </body>
 </html>
