added link to redeeming love movie trailer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
        <h2>About Book</h2>
      </div>
      <p>
-       Redeeming Love is a historical romance by Francine Rivers set in the 1850s Gold Rush in California. The story is inspired by the Book of Hosea from the Bible, and its cental theme is the redeeming love of God towards sinners. In 2020, a film adaption was accounced with D.J Caruso as director. The novel has sold over three millions copies worldwide since its publication in 1991, and was been translated into 30 langauges.
+       Redeeming Love is a historical romance by Francine Rivers set in the 1850s Gold Rush in California. The story is inspired by the Book of Hosea from the Bible, and its cental theme is the redeeming love of God towards sinners. In 2020, a <a href="https://youtu.be/_8RIlIOd_us" target="_blank">film</a> adaption was accounced with D.J Caruso as director. The novel has sold over three millions copies worldwide since its publication in 1991, and was been translated into 30 langauges.
      </p>
      <h3>The Story</h3>
      <p>
