--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
    <header>
@@ -16,7 +18,7 @@
        <ul class="nav__links">
          <li><a href="#home">Home</a></li>
          <li><a href="#aboutBook">About Book</a></li>
-         <li><a href="#">About Author</a></li>
+         <li><a href="#aboutAuthor">About Author</a></li>
        </ul>
    </header>
 
