--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <input type="radio" name="slide" id="img3">
         <input type="radio" name="slide" id="img4">
 
-       <img src="/images/img1.png" class="m1" alt="book cover">
-       <img src="/images/img2.png" class="m2" alt="book cover">
-       <img src="/images/img3.png" class="m3" alt="book cover">
-       <img src="/images/img4.png" class="m4" alt="book cover">
+       <img src="./images/img1.png" class="m1" alt="book cover">
+       <img src="./images/img2.png" class="m2" alt="book cover">
+       <img src="./images/img3.png" class="m3" alt="book cover">
+       <img src="./images/img4.png" class="m4" alt="book cover">
        </div>
 
        <div class="dots">
@@ -67,7 +67,7 @@
    </section>
 
    <section class="author" id="aboutAuthor">
-    <img src="/images/author.jpg" alt="Francine Rivers">
+    <img src="./images/author.jpg" alt="Francine Rivers">
 
     <div class="about-author">
       <h2>About Author</h2>
